--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
   z-index: 5;
   position: fixed;
   top: 1rem;
-  right: 0;
+  right: 2rem;
   text-align: right;
 }
 /* ------------------------------------- */
